--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "markdown editor",
   "main": "dist/main/index.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "electron ."
+    "dev": "webpack --mode=development --devtool=source-map",
+    "prod": "webpack --mode=production",
+    "watch": "webpack --watch --mode=development",
+    "electron": "electron . --inspect",
+    "start": "run-s dev electron"
   },
   "repository": {
     "type": "git",
@@ -26,10 +28,13 @@
     "css-loader": "^6.6.0",
     "electron": "^17.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^3.3.1",
+    "wait-on": "^6.0.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "marked": "^4.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.68.0"
